o added additional recklessness checks for magicians - Elanoron
o added casted.balefire checks in room checking function - Elanoron
o lowered the priority action for 'do reject' in the queuing lua - Elanoron
o added spellshield check for overdriving - Elanoron
o fixed compel alias - Elanoron
o added incoming and outgoing messages for demonologiy seduce attack - Elanoron
o skeleton for fast appraising added (will flesh out in the future) - Elanoron
o fixed demon summoning alias - Elanoron
o optimized the looting function - Elanoron
o added safety checks to target calling function - Elanoron
o new outgoing triggers for rogues - Elanoron
o attack table list updated with appropriate def variable checks for each attack (still work in progress) - Elanoron
o tbalestra function added for advanced rogue bashing - Elanoron
o change in gripping defense check for artie users - Elanoron
o shields added to mtw.weapons table - Elanoron
o inquartata added to gmcp_room check - Elanoron
o fixed the prelude check for bards when bashing - Elanoron
o rogue hiding fixes added for when bashing - Elanoron
o incoming and outgoing trigger for immolate (fixed again...) - Elanoron
o flee check to looting added - Elanoron
o added a stand queue check - Elanoron
o added a got line for concussion from suckerpunch - Elanoron
o added greatsword to mtw.weapons table - Elanoron
o changed the way divinecommand is cured - Elanoron
o added ?import and !import <profile> to fetch saved options from other matawa profiles - Savil
o added a conversion module -Savil
o added a 'reconnect' alias -Savil
o the system will now tell if there is a new version available -Savil
o Added a repeat alias '#<number> <action>' will do <action> <number> times -Savil

v9.9
o Added 'ftease' and 'fjerk' to customize jerking/teasing times -Savil
o Added '?search' to search for text in the code -Savil
o Added soullink defense -Savil
o Changed threaten alias: thrn -Savil