@@ -84,6 +84,9 @@ misdirecting = false,
 marching = false,
 squading = false,
 warding = false,
+antirogue = false, --lightball and lodestone recast
+liturgy = true,
+rewall = false,
 freezing = false,
 scrying = false,
 gripping = false,
